--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,4 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_even:brain_even"
+brain-calc = "brain_games.scripts.brain_calc:brain_calc"
