--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,6 @@ build-backend = "poetry.core.masonry.api"
 brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_even:brain_even"
 brain-calc = "brain_games.scripts.brain_calc:brain_calc"
-brain-gcd = "brain_games.scripts.brain_gcd:main"
+brain-gcd = "brain_games.scripts.brain_gcd:main_gcd"
 brain-progression = "brain_games.scripts.brain_progression:brain_progression"
-brain-prime = "brain_games.scripts.brain_prime:main"
+brain-prime = "brain_games.scripts.brain_prime:main_prime"
